src-ken&y/objects/Reporting_Customer__c.object
<CustomObject>
    <description>Group of Customers for Planning and Reporting</description>
    <fields>
        <fullName>Current__c</fullName>
        <formula>if (  
   AND( Start_Date__c &lt;=  TODAY()  , 
       OR(  End_Date__c &gt;= TODAY(),  ISBLANK( End_Date__c) 
   )
) 
,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>used for uploading</description>
        <externalId>true</externalId>
        <inlineHelpText>used for uploading and integration</inlineHelpText>
        <label>Customer Number</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Investment_Level__c</fullName>
        <label>Investment Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Level 1</fullName>
                </value>
                <value>
                    <fullName>Investment Level 2</fullName>
                </value>
                <value>
                    <fullName>Investment Level 3</fullName>
                </value>
                <value>
                    <fullName>Investment Level 4</fullName>
                </value>
                <value>
                    <fullName>Investment Level 5</fullName>
                </value>
                <value>
                    <fullName>Investment Level 6</fullName>
                </value>
                <value>
                    <fullName>Investment Level 7</fullName>
                </value>
                <value>
                    <fullName>Investment Level 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Hierarchy_Code__c</fullName>
        <inlineHelpText>used for data loading the Sales_Hierarchy__c field</inlineHelpText>
        <label>Sales Hierarchy Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Hierarchy</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipName>Reporting_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>From Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Reporting Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current__c</columns>
        <columns>Customer_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reporting Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>